src/main/java/compiler/tmlgrammar/TMLExprParser.java
/**Copyright GET / ENST / Ludovic Apvrille

ludovic.apvrille at enst.fr

This software is a computer program whose purpose is to edit TURTLE
diagrams, generate RT-LOTOS code from these TURTLE diagrams, and at
last to analyse results provided from externalm formal validation tools.

This software is governed by the CeCILL  license under French law and
abiding by the rules of distribution of free software.  You can  use, 
modify and/ or redistribute the software under the terms of the CeCILL
license as circulated by CEA, CNRS and INRIA at the following URL
"http://www.cecill.info". 

As a counterpart to the access to the source code and rights to copy,
modify and redistribute granted by the license, users are provided only
with a limited warranty  and the software's author,  the holder of the
economic rights,  and the successive licensors  have only  limited
liability. 

In this respect, the user's attention is drawn to the risks associated
with loading,  using,  modifying and/or developing or reproducing the
software by the user in light of its specific status of free software,
that may mean  that it is complicated to manipulate,  and  that  also
therefore means  that it is reserved for developers  and  experienced
professionals having in-depth computer knowledge. Users are therefore
encouraged to load and test the software's suitability as regards their
requirements in conditions enabling the security of their systems and/or 
data to be ensured and,  more generally, to use and operate it in the 
same conditions as regards security. 

The fact that you are presently reading this means that you have had
knowledge of the CeCILL license and that you accept its terms.*/

package compiler.tmlparser;

/* Generated By:JJTree&JavaCC: Do not edit this line. TMLExprParser.java */
package compiler.tmlgrammar;

public class TMLExprParser/*@bgen(jjtree)*/implements TMLExprParserTreeConstants, TMLExprParserConstants {/*@bgen(jjtree)*/
  protected JJTTMLExprParserState jjtree = new JJTTMLExprParserState();private int x;

  private void print(String elt, String name) {
    System.out.println("Found " + elt + " = " + name);
  }

  public static void main(String args[]) {
    TMLExprParser parser;
    System.out.println("TML Expr Parser Version 0.1:  Reading from standard input . . .");
    parser = new TMLExprParser(System.in);
    try {
      SimpleNode node = parser.CompilationUnit();
      node.dump("node:");
      System.out.println("TML Expr Parser Version 0.1:  expr parsed successfully.");
    } catch (ParseException e) {
      System.out.println("TML Expr Parser Version 0.1: Syntax error.");
    }
  }

/***************************************************
 * THE TML Expression LANGUAGE GRAMMAR STARTS HERE *
 ***************************************************/

/*
 * Program structuring syntax follows.
 */
  final public SimpleNode CompilationUnit() throws ParseException {
 /*@bgen(jjtree) Root */
  SimpleNode jjtn000 = new SimpleNode(JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/*
 * Expression syntax follows.
 */
  final public void Expression() throws ParseException {
 /*@bgen(jjtree) Expression */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGNMENT_NAT:
        jj_consume_token(ASSIGNMENT_NAT);
        NatId();
        AssignmentOperator();
        NatExtendedExpression();
        break;
      case ASSIGNMENT_BOOL:
        jj_consume_token(ASSIGNMENT_BOOL);
        BoolId();
        AssignmentOperator();
        BoolExtendedExpression();
        break;
      case ASSIGNMENT_QUEUE_NAT:
        jj_consume_token(ASSIGNMENT_QUEUE_NAT);
        QueueNatId();
        AssignmentOperator();
        QueueNatExtendedExpression();
        break;
      case GUARD:
        jj_consume_token(GUARD);
        jj_consume_token(LBRACKET);
        BoolExtendedExpression();
        jj_consume_token(RBRACKET);
        break;
      case ACTION_NAT:
        jj_consume_token(ACTION_NAT);
        NatExtendedExpression();
        break;
      case ACTION_BOOL:
        jj_consume_token(ACTION_BOOL);
        BoolExtendedExpression();
        break;
      case ACTION_QUEUE_NAT:
        jj_consume_token(ACTION_QUEUE_NAT);
        QueueNatExtendedExpression();
        break;
      case ACTION_GATE:
        jj_consume_token(ACTION_GATE);
        ActionGate();
        break;
      case ACTION_GATE_VALUE:
        jj_consume_token(ACTION_GATE_VALUE);
        ActionGateValue();
        break;
      case NAT_ID:
        jj_consume_token(NAT_ID);
        NatId();
        break;
      case NAT_NUMERAL:
        jj_consume_token(NAT_NUMERAL);
        NaturalLiteral();
        break;
      case TRUE:
      case FALSE:
      case EMPTY:
      case NOT:
      case NATURAL_LITERAL:
      case IDENTIFIER:
      case LPAREN:
        BoolExtendedExpression();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void AssignmentOperator() throws ParseException {
 /*@bgen(jjtree) NAT_ASSIGN */
 SimpleNode jjtn000 = new SimpleNode(JJTNAT_ASSIGN);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ASSIGN);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
             jjtn000.setInfo(""+t.kind,t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*************** NAT ****************/
  final public void NatExtendedExpression() throws ParseException {
 /*@bgen(jjtree) NatExtendedExpression */
 SimpleNode jjtn000 = new SimpleNode(JJTNATEXTENDEDEXPRESSION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        LParen();
        NatExtendedExpression();
        RParen();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
        case STAR:
        case SLASH:
        case REM:
          NatOperatorExtendedExpression();
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        break;
      case NATURAL_LITERAL:
        NaturalLiteral();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
        case STAR:
        case SLASH:
        case REM:
          NatOperatorExtendedExpression();
          break;
        default:
          jj_la1[2] = jj_gen;
          ;
        }
        break;
      case IDENTIFIER:
        NatId();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
        case STAR:
        case SLASH:
        case REM:
          NatOperatorExtendedExpression();
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void NatId() throws ParseException {
 /*@bgen(jjtree) NAT_ID */
 SimpleNode jjtn000 = new SimpleNode(JJTNAT_ID);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                  jjtn000.setInfo(""+t.kind,t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void QueueNatId() throws ParseException {
 /*@bgen(jjtree) QUEUE_NAT_ID */
 SimpleNode jjtn000 = new SimpleNode(JJTQUEUE_NAT_ID);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                  jjtn000.setInfo(""+t.kind,t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void BoolId() throws ParseException {
 /*@bgen(jjtree) BOOL_ID */
 SimpleNode jjtn000 = new SimpleNode(JJTBOOL_ID);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                  jjtn000.setInfo(""+t.kind,t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void QueueNatFunc() throws ParseException {
 /*@bgen(jjtree) NAT_QUEUE_NAT_FUNC */
 SimpleNode jjtn000 = new SimpleNode(JJTNAT_QUEUE_NAT_FUNC);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FIRST:
        t = jj_consume_token(FIRST);
        LParen();
        QueueNatExtendedExpression();
        RParen();
        break;
      case LAST:
        t = jj_consume_token(LAST);
        LParen();
        QueueNatExtendedExpression();
        RParen();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   jjtn000.setInfo(""+t.kind,t.image);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void NatOperatorExtendedExpression() throws ParseException {
 /*@bgen(jjtree) NatOperatorExtendedExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTNATOPERATOREXTENDEDEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      NatOperator();
      NatExtendedExpression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void NatOperator() throws ParseException {
 /*@bgen(jjtree) NAT_OP */
 SimpleNode jjtn000 = new SimpleNode(JJTNAT_OP);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
        break;
      case STAR:
        t = jj_consume_token(STAR);
        break;
      case SLASH:
        t = jj_consume_token(SLASH);
        break;
      case REM:
        t = jj_consume_token(REM);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                      jjtree.closeNodeScope(jjtn000, true);
                                                      jjtc000 = false;
                                                     jjtn000.setInfo(""+t.kind,t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/********* QUEUE_NAT ***************/
  final public void QueueNatExtendedExpression() throws ParseException {
 /*@bgen(jjtree) QueueNatExtendedExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTQUEUENATEXTENDEDEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        LParen();
        QueueNatExtendedExpression();
        RParen();
        break;
      case ENQUEUE:
      case DEQUEUE:
      case DESTROY:
        GetQueueNatFunction();
        break;
      case QUEUE_LITERAL:
        QueueNatLiteral();
        break;
      case IDENTIFIER:
        QueueNatId();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void GetQueueNatFunction() throws ParseException {
 /*@bgen(jjtree) QUEUE_NAT_FUNC */
 SimpleNode jjtn000 = new SimpleNode(JJTQUEUE_NAT_FUNC);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ENQUEUE:
        t = jj_consume_token(ENQUEUE);
        LParen();
        NatExtendedExpression();
        jj_consume_token(COMMA);
        QueueNatExtendedExpression();
        RParen();
        break;
      case DEQUEUE:
        t = jj_consume_token(DEQUEUE);
        LParen();
        QueueNatExtendedExpression();
        RParen();
        break;
      case DESTROY:
        t = jj_consume_token(DESTROY);
        LParen();
        NatExtendedExpression();
        jj_consume_token(COMMA);
        QueueNatExtendedExpression();
        RParen();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   jjtn000.setInfo(""+t.kind,t.image);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
